--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <style>
+        body {
+            padding: 0;
+            margin: 0;
+        }
+        
         h1,
         .foto {
-            text-align: center;
+            bottom: auto 50;
+            width: 100%;
         }
     </style>
 </head>
